--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,29 +1,24 @@
 name: Build backend app
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-    - add_actions_backend
-    paths:
-    - 'backend/**'
+    branches: [ add_actions_backend ]
 
-env:
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+# env:
+#   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
-  TestAndBuild:
-    name: Test and Build backend app
-    runs-on: ubuntu-latest
+  test:
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
-
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
+      run: ls -la
+    #   uses: actions/setup-java@v3
+    #   with:
+    #     java-version: '11'
+    #     distribution: 'temurin'
 
-    - name: Build with Maven
-      run: mvn clean package package
+    # - name: Build with Maven
+    #   run: mvn clean package package
