--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: 
     - add_actions_backend
+    paths: 
+    - 'backend/**'
+    - '.github/workflows/backend.yml'
 
 # env:
 #   GH_TOKEN: ${{ secrets.GH_TOKEN }}
