--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,27 +2,28 @@ name: Build backend app
 
 on:
   push:
-    branches: 
+    branches:
     - add_actions_backend
-    paths: 
+    paths:
     - '.github/workflows/backend.yml'
     - 'backend/**'
 
-# env:
-#   GH_TOKEN: ${{ secrets.GH_TOKEN }}
+env:
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
   test:
+    name: Build backend app and deploy
     runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      run: ls -la
-    #   uses: actions/setup-java@v3
-    #   with:
-    #     java-version: '11'
-    #     distribution: 'temurin'
 
-    # - name: Build with Maven
-    #   run: mvn clean package package
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+
+    - name: Build with Maven
+      run: mvn clean package package
