--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -25,5 +25,10 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
+    - name: Set up Maven
+      uses: stCarolas/setup-maven@v4.5
+      with:
+        maven-version: 3.8.2
+
     - name: Build with Maven
-      run: java --version
+      run: mvn clean package package
