--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -31,4 +31,6 @@ jobs:
         maven-version: 3.8.2
 
     - name: Build with Maven
-      run: mvn clean package package
+      run: |
+        cd backend
+        mvn clean package package
