--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,6 +1,11 @@
 name: Build backend app
 
+defaults:
+  run:
+    working-directory: "backend/app/"
+
 on:
+  workflow_dispatch:
   push:
     branches:
     - add_actions_backend
