--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -11,6 +11,10 @@ on:
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   test:
@@ -39,10 +43,22 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     
-    - name: build Backend Dockerfile
+    - name: Build Backend Dockerfile
       run: |  
         cd backend
         docker build . --tag bootcamp-backend:1.0.0
 
-    - name: list docker image
+    - name: Push Docker image
       run: docker image ls
+
+    - name: Log into registry ${{ env.REGISTRY }}
+      uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ env.GH_TOKEN }}
+
+    - name: Tag and Push Backend Dockerfile
+      run: |  
+        docker tag bootcamp-backend:1.0.0 ghcr.io/luizlopes/bootcamp-backend:1.0.0
+        docker push bootcamp-backend:1.0.0 ghcr.io/luizlopes/bootcamp-backend:1.0.0
