--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -62,4 +62,4 @@ jobs:
       run: docker tag bootcamp-backend:1.0.0 ghcr.io/luizlopes/bootcamp-backend:1.0.0
 
     - name: Push Backend Docker image
-      run:  docker push bootcamp-backend:1.0.0 ghcr.io/luizlopes/bootcamp-backend:1.0.0
+      run:  docker push ghcr.io/luizlopes/bootcamp-backend:1.0.0
