ci: backend docker login and push .....

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -20,6 +20,8 @@ jobs:
   test:
     name: Build backend app and deploy
     runs-on: self-hosted
+    permissions:
+      packages: write
 
     steps:
     - uses: actions/checkout@v3
