--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -10,7 +10,7 @@ on:
     - 'backend/**'
 
 env:
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  GH_TOKEN: ${{ secrets.GH_TOKEN2 }}
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
