--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -10,11 +10,11 @@ on:
     - 'backend/**'
 
 env:
+  USER: ${{ github.actor }}
   GH_TOKEN: ${{ secrets.GH_TOKEN2 }}
-  # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: bootcamp-backend
+  IMAGE_VERSION: 1.0.1
 
 jobs:
   test:
@@ -37,21 +37,15 @@ jobs:
       with:
         maven-version: 3.8.2
 
+    - name: Test Backend with Maven
+      run: |
+        cd backend
+        mvn clean test
+
     - name: Build Backend with Maven
       run: |
         cd backend
-        mvn clean package package
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    
-    - name: Build Backend Dockerfile
-      run: |  
-        cd backend
-        docker build . --tag bootcamp-backend:1.0.0
-
-    - name: Push Docker image
-      run: docker image ls
+        mvn clean package
 
     - name: Log into registry ${{ env.REGISTRY }}
       uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
@@ -60,8 +54,16 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ env.GH_TOKEN }}
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Build Backend Dockerfile
+      run: |
+        cd backend
+        docker build . --tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+
     - name: Tag Backend Docker image
-      run: docker tag bootcamp-backend:1.0.0 ghcr.io/luizlopes/bootcamp-backend:1.0.0
+      run: docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }} ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
 
     - name: Push Backend Docker image
-      run:  docker push ghcr.io/luizlopes/bootcamp-backend:1.0.0
+      run:  docker push ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
