--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,7 +17,7 @@ env:
   IMAGE_VERSION: 1.0.1
 
 jobs:
-  test:
+  build_and_push:
     name: Build backend app and deploy
     runs-on: self-hosted
     permissions:
