--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,5 +1,9 @@
 name: Build backend app
 
+defaults:
+  run:
+    working-directory: "backend"
+
 on:
   workflow_dispatch:
   push:
@@ -39,16 +43,14 @@ jobs:
 
     - name: Test Backend with Maven
       run: |
-        cd backend
         mvn clean test
 
     - name: Build Backend with Maven
       run: |
-        cd backend
         mvn clean package
 
     - name: Log into registry ${{ env.REGISTRY }}
-      uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+      uses: docker/login-action@v2
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
@@ -57,13 +59,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build Backend Dockerfile
-      run: |
-        cd backend
-        docker build . --tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
 
-    - name: Tag Backend Docker image
-      run: docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }} ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
-
-    - name: Push Backend Docker image
-      run:  docker push ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
