--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -18,7 +18,7 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN2 }}
   REGISTRY: ghcr.io
   IMAGE_NAME: bootcamp-backend
-  IMAGE_VERSION: 1.0.1
+  IMAGE_VERSION: 1.0.2
 
 jobs:
   build_and_push:
@@ -63,7 +63,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: ./Dockerfile
+        file: ./backend/Dockerfile
         push: true
         tags: ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
 
