--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,9 +1,5 @@
 name: Build backend app
 
-defaults:
-  run:
-    working-directory: "backend"
-
 on:
   workflow_dispatch:
   push:
@@ -18,7 +14,7 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN2 }}
   REGISTRY: ghcr.io
   IMAGE_NAME: bootcamp-backend
-  IMAGE_VERSION: 1.0.2
+  IMAGE_VERSION: 1.0.1
 
 jobs:
   build_and_push:
@@ -43,10 +39,12 @@ jobs:
 
     - name: Test Backend with Maven
       run: |
+        cd backend
         mvn clean test
 
     - name: Build Backend with Maven
       run: |
+        cd backend
         mvn clean package
 
     - name: Log into registry ${{ env.REGISTRY }}
@@ -59,11 +57,13 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: ./backend/Dockerfile
-        push: true
-        tags: ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+    - name: Build Backend Dockerfile
+      run: |
+        cd backend
+        docker build . --tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
 
+    - name: Tag Backend Docker image
+      run: docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }} ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+
+    - name: Push Backend Docker image
+      run:  docker push ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
