--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,4 +1,8 @@
-name: Build backend app
+name: Build frontend app
+
+defaults:
+  run:
+    working-directory: "frontend"
 
 on:
   workflow_dispatch:
