--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -2,7 +2,7 @@ name: Build frontend app
 
 defaults:
   run:
-    working-directory: "frontend"
+    working-directory: "frontend/app"
 
 on:
   workflow_dispatch:
