--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -30,10 +30,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v3
+    - name: Setup node
+      uses: actions/setup-node@v3
       with:
         node-version: 16
-    - run: npm test
+
+    - name: npm install
+      run: |
+        npm install
+        npm test
 
     # - name: Log into registry ${{ env.REGISTRY }}
     #   uses: docker/login-action@v2
