--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -38,7 +38,8 @@ jobs:
     - name: npm install
       run: |
         npm install
-        npm test
+        npm install -g @angular/cl
+        npm run test
 
     # - name: Log into registry ${{ env.REGISTRY }}
     #   uses: docker/login-action@v2
