--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -34,12 +34,15 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16
+    
+    - name: Install Angular
+      run: npm install -g @angular/cli
 
-    - name: npm install
-      run: |
-        npm install
-        npm install -g @angular/cl
-        npm run test
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run tests
+      run: npm run test
 
     # - name: Log into registry ${{ env.REGISTRY }}
     #   uses: docker/login-action@v2
