--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -18,7 +18,7 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN2 }}
   REGISTRY: ghcr.io
   IMAGE_NAME: bootcamp-frontend
-  IMAGE_VERSION: 1.0.1
+  IMAGE_VERSION: 1.0.0
 
 jobs:
   build_and_push:
@@ -41,26 +41,26 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run tests
-      run: npm run test
+    # - name: Run tests
+    #   run: npm run test
 
-    # - name: Log into registry ${{ env.REGISTRY }}
-    #   uses: docker/login-action@v2
-    #   with:
-    #     registry: ${{ env.REGISTRY }}
-    #     username: ${{ github.actor }}
-    #     password: ${{ env.GH_TOKEN }}
+    - name: Log into registry ${{ env.REGISTRY }}
+      uses: docker/login-action@v2
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ env.GH_TOKEN }}
 
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-    # - name: Build Backend Dockerfile
-    #   run: |
-    #     cd backend
-    #     docker build . --tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+    - name: Build Backend Dockerfile
+      run: |
+        cd ..
+        docker build . --tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
 
-    # - name: Tag Backend Docker image
-    #   run: docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }} ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+    - name: Tag Backend Docker image
+      run: docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }} ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
 
-    # - name: Push Backend Docker image
-    #   run:  docker push ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+    - name: Push Backend Docker image
+      run:  docker push ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
