--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -42,7 +42,7 @@ jobs:
       run: npm install
 
     - name: Run tests
-      run: npm run test -- --prod
+      run: npm run test
 
     - name: Log into registry ${{ env.REGISTRY }}
       uses: docker/login-action@v2
