--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -41,6 +41,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Run server
+      run: npm run start
+
     - name: Run tests
       run: npm run test
 
