--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -42,7 +42,10 @@ jobs:
       run: npm install
 
     - name: Run server
-      run: npm run start
+      run: npm run start &
+
+    - name: Sleep for 15 seconds
+      run: sleep 15s
 
     - name: Run tests
       run: npm run test
