--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -45,7 +45,7 @@ jobs:
       run: npm run start &
 
     - name: Sleep for 15 seconds
-      run: sleep 15s
+      run: sleep 15
 
     - name: Run tests
       run: npm run test
