--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -41,14 +41,14 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run server
-      run: npm run start --port 9876 &
+    # - name: Run server
+    #   run: npm run start --port 9876 &
 
-    - name: Sleep for 15 seconds
-      run: sleep 15
+    # - name: Sleep for 15 seconds
+    #   run: sleep 15
 
-    - name: Run tests
-      run: npm run test
+    # - name: Run tests
+    #   run: npm run test
 
     - name: Log into registry ${{ env.REGISTRY }}
       uses: docker/login-action@v2
