--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -74,6 +74,7 @@ jobs:
       run: |
         pwd
         ls
+        ls target/
 
     # - name: Build and push
     #   uses: docker/build-push-action@v4
