--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -21,8 +21,8 @@ env:
   IMAGE_VERSION: 1.0.1
 
 jobs:
-  build_and_push:
-    name: Build backend app and deploy
+  setup:
+    name: Setup
     runs-on: self-hosted
     permissions:
       packages: write
@@ -36,26 +36,51 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
-    - name: Set up Maven
-      uses: stCarolas/setup-maven@v4.5
-      with:
-        maven-version: 3.8.2
+  run_tests:
+    needs: setup
+    name: Run tests
+    runs-on: self-hosted
+    permissions:
+      packages: write
 
+    steps:
     - name: Test Backend with Maven
       run: |
         mvn clean test
 
+  maven_build:
+    needs: run_tests
+    name: Build Backend with Maven
+    runs-on: self-hosted
+
+    steps:
     - name: Build Backend with Maven
       run: |
         mvn clean package
 
-    - name: Log into registry ${{ env.REGISTRY }}
+  registry_login:
+    needs: maven_build
+    name: Log into registry
+    runs-on: self-hosted
+    permissions:
+      packages: write
+    
+    steps:
+    - name: Log into registry
       uses: docker/login-action@v2
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ env.USER }}
         password: ${{ env.GH_TOKEN }}
 
+  docker_build_and_push:
+    needs: registry_login
+    name: Build backend app and deploy
+    runs-on: self-hosted
+    permissions:
+      packages: write
+    
+    steps:
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
