--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -36,6 +36,11 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
+    - name: Set up Maven
+      uses: stCarolas/setup-maven@v4.5
+      with:
+        maven-version: 3.8.2
+
   run_tests:
     needs: setup
     name: Run tests
