--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -38,7 +38,7 @@ jobs:
 
   maven_build:
     needs: setup
-    name: Test & uild Backend with Maven
+    name: Test & build Backend with Maven
     runs-on: self-hosted
 
     steps:
@@ -56,7 +56,7 @@ jobs:
 
   docker_build_and_push:
     needs: maven_build
-    name: Build backend app and deploy
+    name: Build and deploy backend with Docker
     runs-on: self-hosted
     permissions:
       packages: write
