--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -21,8 +21,8 @@ env:
   IMAGE_VERSION: 1.0.0
 
 jobs:
-  build_and_push:
-    name: Build backend app and deploy
+  build_node:
+    name: Build frontend app and deploy
     runs-on: self-hosted
     permissions:
       packages: write
@@ -34,7 +34,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16
-    
+
     - name: Install Angular
       run: npm install -g @angular/cli
 
@@ -50,6 +50,14 @@ jobs:
     # - name: Run tests
     #   run: npm run test
 
+  docker_build_and_push:
+    needs: build_node
+    name: Build and deploy backend with Docker
+    runs-on: self-hosted
+    permissions:
+      packages: write
+
+    steps:
     - name: Log into registry ${{ env.REGISTRY }}
       uses: docker/login-action@v2
       with:
@@ -57,16 +65,10 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ env.GH_TOKEN }}
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Build Backend Dockerfile
-      run: |
-        cd ..
-        docker build . --tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
-
-    - name: Tag Backend Docker image
-      run: docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }} ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
-
-    - name: Push Backend Docker image
-      run:  docker push ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ./frontend
+        file: ./frontend/Dockerfile
+        push: true
+        tags: ${{ env.REGISTRY }}/${{ env.USER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
