--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -52,7 +52,7 @@ jobs:
 
   docker_build_and_push:
     needs: build_node
-    name: Build and deploy backend with Docker
+    name: Build and deploy front with Docker
     runs-on: self-hosted
     permissions:
       packages: write
