--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -23,7 +23,7 @@ env:
 jobs:
   build_node:
     name: Build Frontend app with npm
-    runs-on: self-hosted
+    runs-on: ubuntu-latest #self-hosted
     permissions:
       packages: write
 
@@ -47,8 +47,8 @@ jobs:
     # - name: Sleep for 15 seconds
     #   run: sleep 15
 
-    # - name: Run tests
-    #   run: npm run test
+    - name: Run tests
+      run: npm run test
 
   docker_build_and_push:
     needs: build_node
