--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Setup node
       uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: 14
 
     - name: Install Angular
       run: npm install -g @angular/cli
@@ -49,7 +49,7 @@ jobs:
     #   run: sleep 15
 
     - name: Run tests
-      run: npm run test
+      run: ng test
 
   docker_build_and_push:
     needs: build_node
