--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -49,7 +49,7 @@ jobs:
     #   run: sleep 15
 
     - name: Run tests
-      run: ng test
+      run: ng test --watch=false --browsers=ChromeHeadless
 
   docker_build_and_push:
     needs: build_node
