--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,8 +1,8 @@
 name: Build frontend app
 
-defaults:
-  run:
-    working-directory: "frontend"
+# defaults:
+#   run:
+#     working-directory: "frontend"
 
 on:
   workflow_dispatch:
@@ -41,7 +41,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd app
+        cd frontend/app
         npm install
 
     # - name: Run tests
