--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,8 +1,8 @@
 name: Build frontend app
 
-# defaults:
-#   run:
-#     working-directory: "frontend"
+defaults:
+  run:
+    working-directory: "frontend/app"
 
 on:
   workflow_dispatch:
@@ -55,6 +55,8 @@ jobs:
       packages: write
 
     steps:
+    - uses: actions/checkout@v3
+
     - name: Log into registry ${{ env.REGISTRY }}
       uses: docker/login-action@v2
       with:
