--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -40,9 +40,7 @@ jobs:
       run: npm install -g @angular/cli
 
     - name: Install dependencies
-      run: |
-        cd frontend/app
-        npm install
+      run: npm install
 
     # - name: Run tests
     #   run: ng test --watch=false 
